# git_branching_strategy

./: .gitignore  README.md  file_a.txt  pyproject.toml
.github/: pull_request_template.md
.github/actions/: package-lock.json  package.json
.github/actions/pr-checklist/: action.yml  index.js
.github/scripts/: pr_checklist.sh
.github/workflows/: check_semantic_version.yml  ci.yml  foobar.yml  main_tagged.yml  pr_checklist.yml  pr_created.yml  pr_ready_for_review.yml  pr_to_main.yml  publish.yml  push_to_feature_branch.yml
src/example_package_crouchcd/: example.py
tests/: test_example.py
tests/gha_events/: main_tagged.json  pr_feature.json  pr_merged.json  pr_ready_feature.json  pr_ready_fix.json
