[tool.poetry]
name = "example-package-crouchcd"
version = "0.1.0"
description = "A small example package"
authors = ["Example Author <author@example.com>"]
readme = "README.md"
packages = [{include = "example_package_crouchcd", from = "src"}]
homepage = "https://github.com/pypa/sampleproject"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-benchmark = "^4.0.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
